--- a/rebar.config
+++ b/rebar.config
@@ -6,5 +6,5 @@
 {deps,  [ {hex, ".*", {git, "https://github.com/tonyrog/hex.git"}},
 	  {hex_epx, ".*", {git, "https://github.com/tonyrog/hex_epx.git"}},
 	  {epx, ".*", {git, "https://github.com/tonyrog/epx.git"}},
-	  {lager, ".*", {git, "https://github.com/Feuerlabs/lager.git"}}
+	  {lager, ".*", {git, "https://github.com/tonyrog/lager.git"}}
 	]}.
