--- a/rebar.config
+++ b/rebar.config
@@ -3,8 +3,5 @@
 %%
 {erl_opts, [debug_info]}.
 
-{deps,  [ {hex, ".*", {git, "https://github.com/tonyrog/hex.git"}},
-	  {hex_epx, ".*", {git, "https://github.com/tonyrog/hex_epx.git"}},
-	  {epx, ".*", {git, "https://github.com/tonyrog/epx.git"}},
-	  {lager, ".*", {git, "https://github.com/tonyrog/lager.git"}}
+{deps,  [ {epx, ".*", {git, "https://github.com/tonyrog/epx.git"}}
 	]}.
